# s-term

./: .gitguardian.yaml  .gitignore  LICENSE  README.md  design.html  index.html  package-lock.json  package.json  pr_body.md  skills-lock.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.module.css  App.tsx  api.ts  groupTransferLock.ts  i18n.tsx  main.tsx  settings.ts  sidebarOrder.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  pty.rs  session.rs  ssh.rs  vault.rs
src/components/: ConfirmModal.tsx  ConnectionForm.tsx  KeyManager.tsx  LoadingOverlay.tsx  PasswordPrompt.tsx  SettingsModal.tsx  Sidebar.tsx  TabBar.tsx  Terminal.tsx  UnlockVault.tsx
src/components/atoms/Button/: Button.module.css  Button.tsx
src/components/atoms/ErrorText/: ErrorText.module.css  ErrorText.tsx
src/components/atoms/FieldLabel/: FieldLabel.module.css  FieldLabel.tsx
src/components/atoms/IconButton/: IconButton.module.css  IconButton.tsx
src/components/atoms/RangeSlider/: RangeSlider.module.css  RangeSlider.tsx
src/components/atoms/Select/: Select.module.css  Select.tsx
src/components/atoms/Spinner/: Spinner.module.css  Spinner.tsx
src/components/atoms/Switch/: Switch.module.css  Switch.tsx
src/components/atoms/TextArea/: TextArea.tsx
src/components/atoms/TextInput/: TextInput.tsx
src/locales/: en.ts  es.ts
src/styles/: index.css  reset.css  themes.css  tokens.css  typography.css
(+58 files in other folders)
