[package]
name = "s-term"
version = "0.1.1"
description = "Terminal app with multi-session management and an encrypted SSH connection directory"
authors = ["Johan Ibarra"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "s_term_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
thiserror = "1"
which = "6"
tokio = { version = "1", features = ["sync", "time"] }
csv = "1"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
